--- a/templates/viewnote.html
+++ b/templates/viewnote.html
@@ -12,9 +12,9 @@
 
 <body class="text-center ">
     <button class="btn btn-primary fw-bold float-end mr-5">Back</button>
-    <h1 class="mt-5">{{note["subject"]}}</h1>
+    <h1 class="mt-5">{{note.subject}}</h1>
     <div class="books mt-5">
-       {{note["content"]}}
+       {{note.content}}
     </div>
 </body>
 
