fixed add note url

--- a/templates/viewnote.html
+++ b/templates/viewnote.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="text-center ">
-    <button class="btn btn-primary fw-bold float-end mr-5">Back</button>
+    <a href="/" class="btn btn-primary fw-bold float-end mr-5">Back</a href="/">
     <h1 class="mt-5">{{note.subject}}</h1>
     <div class="books mt-5">
        {{note.content}}
